--- a/FoodTrackerRWT/Base.lproj/Main.storyboard
+++ b/FoodTrackerRWT/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="uUk-iy-So8">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="N50-ee-Nwh">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Meal Table View Controller-->
+        <!--Your Meals-->
         <scene sceneID="s72-yJ-gmS">
             <objects>
                 <tableViewController id="uUk-iy-So8" customClass="MealTableViewController" customModule="FoodTrackerRWT" customModuleProvider="target" sceneMemberID="viewController">
@@ -32,22 +32,25 @@
                                                 <constraint firstAttribute="width" constant="90" id="DBA-7w-EeB"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0dn-c1-vc9">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0dn-c1-vc9">
                                             <rect key="frame" x="98" y="11" width="296" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <stackView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Te1-Pl-yCa" customClass="RatingControl" customModule="FoodTrackerRWT" customModuleProvider="target">
+                                        <stackView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Te1-Pl-yCa" customClass="RatingControl" customModule="FoodTrackerRWT" customModuleProvider="target">
                                             <rect key="frame" x="98" y="40" width="252" height="44"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         </stackView>
                                     </subviews>
                                     <constraints>
+                                        <constraint firstItem="0dn-c1-vc9" firstAttribute="trailing" secondItem="zI2-V7-wrb" secondAttribute="trailingMargin" id="0iK-OF-LXU"/>
                                         <constraint firstItem="zFE-Bx-m9G" firstAttribute="top" secondItem="zI2-V7-wrb" secondAttribute="top" id="FZu-CQ-OwS"/>
+                                        <constraint firstItem="0dn-c1-vc9" firstAttribute="leading" secondItem="zFE-Bx-m9G" secondAttribute="trailing" constant="8" symbolic="YES" id="Vt7-b9-oRb"/>
+                                        <constraint firstItem="0dn-c1-vc9" firstAttribute="leading" secondItem="Te1-Pl-yCa" secondAttribute="leading" id="Wct-D8-WdU"/>
                                         <constraint firstAttribute="bottom" secondItem="zFE-Bx-m9G" secondAttribute="bottom" id="g3y-8Z-Bem"/>
+                                        <constraint firstItem="Te1-Pl-yCa" firstAttribute="top" secondItem="0dn-c1-vc9" secondAttribute="bottom" constant="8" symbolic="YES" id="kTn-mV-9Fm"/>
                                         <constraint firstItem="zFE-Bx-m9G" firstAttribute="leading" secondItem="zI2-V7-wrb" secondAttribute="leading" id="nsr-5K-nKQ"/>
+                                        <constraint firstItem="0dn-c1-vc9" firstAttribute="top" secondItem="zI2-V7-wrb" secondAttribute="topMargin" id="vRi-39-AJC"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -62,12 +65,19 @@
                             <outlet property="delegate" destination="uUk-iy-So8" id="NVX-Ed-Uqu"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" title="Your Meals" id="a6e-jJ-tOx">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="5f6-yn-rUU">
+                            <connections>
+                                <segue destination="KoL-PY-dYe" kind="presentation" identifier="AddItem" id="bAh-Dg-0Vm"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ECx-zP-ITu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-717.39130434782612" y="133.92857142857142"/>
+            <point key="canvasLocation" x="192.75362318840581" y="133.92857142857142"/>
         </scene>
-        <!--Meal View Controller-->
+        <!--New Meal-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="MealViewController" customModule="FoodTrackerRWT" customModuleProvider="target" sceneMemberID="viewController">
@@ -75,8 +85,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="7WA-75-33H">
-                                <rect key="frame" x="20" y="64" width="374" height="470"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="7WA-75-33H">
+                                <rect key="frame" x="20" y="108" width="374" height="464"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter meal name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cNL-tn-MaS">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="30"/>
@@ -94,8 +104,8 @@
                                             <outletCollection property="gestureRecognizers" destination="lnJ-rY-zpL" appends="YES" id="NXK-yI-lkZ"/>
                                         </connections>
                                     </imageView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="QZk-gq-Gbc" customClass="RatingControl" customModule="FoodTrackerRWT" customModuleProvider="target">
-                                        <rect key="frame" x="61" y="420" width="252" height="50"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="QZk-gq-Gbc" customClass="RatingControl" customModule="FoodTrackerRWT" customModuleProvider="target">
+                                        <rect key="frame" x="61" y="420" width="252" height="44"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="starCount">
                                                 <integer key="value" value="5"/>
@@ -119,20 +129,71 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="New Meal" id="Umq-Ud-av4">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="ofc-1A-zpZ">
+                            <connections>
+                                <action selector="cancel:" destination="BYZ-38-t0r" id="Rbi-Ci-HKs"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="GdP-7m-Iyc">
+                            <connections>
+                                <segue destination="dD3-me-VNO" kind="unwind" unwindAction="unwindToMealListWithSender:" id="BNy-V4-86a"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
+                        <outlet property="cancelButton" destination="ofc-1A-zpZ" id="p4b-Bp-CVO"/>
                         <outlet property="nameTextField" destination="cNL-tn-MaS" id="h7B-hl-GbO"/>
                         <outlet property="photoImageView" destination="xt5-62-Rt2" id="69m-ey-ZWM"/>
                         <outlet property="ratingControl" destination="QZk-gq-Gbc" id="G6H-bg-S1p"/>
+                        <outlet property="saveButton" destination="GdP-7m-Iyc" id="MIr-bB-Lda"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <exit id="dD3-me-VNO" userLabel="Exit" sceneMemberID="exit"/>
                 <tapGestureRecognizer id="lnJ-rY-zpL">
                     <connections>
                         <action selector="selectImageFromPhotoLibrary:" destination="BYZ-38-t0r" id="iqS-Pd-Fu5"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="133.59999999999999" y="133.5832083958021"/>
+            <point key="canvasLocation" x="1953.6231884057972" y="133.25892857142856"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ydx-KY-lmT">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="N50-ee-Nwh" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="cmg-do-HwQ">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="uUk-iy-So8" kind="relationship" relationship="rootViewController" id="rPQ-4G-oSK"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1MB-48-Gzz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-717.39130434782612" y="133.92857142857142"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="2Dx-ik-Gjn">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="KoL-PY-dYe" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="R67-ry-8B3">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="hTg-50-EHa"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rgb-nJ-tAr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1043.4782608695652" y="133.25892857142856"/>
         </scene>
     </scenes>
     <resources>
